[gd_scene load_steps=3 format=3 uid="uid://cyfwbc73k031b"]

[ext_resource type="Script" path="res://map/totems/room_zone.gd" id="1_7plbw"]
[ext_resource type="Texture2D" uid="uid://bmxj5l3bd12a3" path="res://map/room_zone/black.png" id="2_ia411"]

[node name="RoomZone" type="Area2D"]
collision_layer = 0
collision_mask = 10
monitorable = false
priority = 10.0
script = ExtResource("1_7plbw")

[node name="Sprite" type="Sprite2D" parent="."]
texture = ExtResource("2_ia411")

[node name="CollisionShape" type="CollisionShape2D" parent="."]

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
